# yasumem

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
data/: last_ingest_at
go/: db.go  go.mod  go.sum  ingest.go  lessons.go  main.go  recall.go  server.go  subaru.go
hooks/: hooks.json
hooks-handlers/: session-start.sh  session-stop.sh
src/yasumem/: db.py  ingest.py  ingest_recent.py  recall_hook.py  server.py
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: chunks.ts  db.ts  index.ts  ingest.ts  lessons.ts  paths.ts  personas.ts  server.ts
